--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,6 +34,19 @@ services:
       FAST_STARTUP: ${FAST_STARTUP:-false}
       FAST_STARTUP_AUTO_UPGRADE: ${FAST_STARTUP_AUTO_UPGRADE:-true}
       DEV_RELOAD: ${DEV_RELOAD:-1}
+      # Ensure core data pipelines and monitors are active by default for local dev
+      INGESTION_ENABLED: ${INGESTION_ENABLED:-true}
+      FEATURE_SCHED_INTERVAL: ${FEATURE_SCHED_INTERVAL:-60}
+      INFERENCE_AUTO_LOOP_ENABLED: ${INFERENCE_AUTO_LOOP_ENABLED:-true}
+      INFERENCE_AUTO_LOOP_INTERVAL: ${INFERENCE_AUTO_LOOP_INTERVAL:-15}
+      AUTO_LABELER_ENABLED: ${AUTO_LABELER_ENABLED:-true}
+      AUTO_LABELER_INTERVAL: ${AUTO_LABELER_INTERVAL:-30}
+      AUTO_LABELER_MIN_AGE_SECONDS: ${AUTO_LABELER_MIN_AGE_SECONDS:-60}
+      CALIBRATION_MONITOR_ENABLED: ${CALIBRATION_MONITOR_ENABLED:-true}
+      CALIBRATION_MONITOR_INTERVAL: ${CALIBRATION_MONITOR_INTERVAL:-60}
+      CALIBRATION_MONITOR_WINDOW_SECONDS: ${CALIBRATION_MONITOR_WINDOW_SECONDS:-3600}
+      SYMBOL: ${SYMBOL:-XRPUSDT}
+      INTERVAL: ${INTERVAL:-15m}
       # Align signal source & loops with local
       SIGNAL_SOURCE: ${SIGNAL_SOURCE:-ml}
       ML_AUTO_LOOP_ENABLED: ${ML_AUTO_LOOP_ENABLED:-true}
