--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytorch-lightning = {version = "^2.2.1", optional = true}
 scikit-learn = {version = "^1.4.2"}
 stable-baselines3 = {version = "^2.3.0", optional = true}
 feedparser = "^6.0.11"
+httpx = "^0.27.0"
 
 [tool.poetry.extras]
 training = ["numpy", "pandas", "torch", "pytorch-lightning", "scikit-learn", "stable-baselines3"]
@@ -33,9 +34,9 @@ training = ["numpy", "pandas", "torch", "pytorch-lightning", "scikit-learn", "st
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 pytest-asyncio = "^0.23.6"
-httpx = "^0.27.0"
 ruff = "^0.4.4"
 mypy = "^1.10.0"
+asgi-lifespan = "^2.1.0"
 
 [tool.ruff]
 line-length = 100
